--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,13 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navigation ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+
+.navigation li {
+  padding: 15px;
+  font-size: 20px;
 }
