fixed graph issue, added entry page

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -181,3 +181,9 @@ main {
   flex-basis: calc(100% / 7);
   width: calc(100% / 7);
 }
+
+.calendar .calendar-thumbnail {
+  height: 100%;
+  width: auto;
+  margin: 0 auto;
+}
