--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,33 @@
   color: #61dafb;
 }
 
-.navigation ul {
-  list-style-type: none;
+.navigation {
   display: flex;
-  justify-content: center;
-}
-
-.navigation li {
+  justify-content: space-between;
   padding: 15px;
   font-size: 20px;
+  width: 100%;
+}
+
+.main {
+  padding-top: 20px;
+  width: 100%;
+}
+
+.navigation a {
+  padding: 15px;
+}
+
+.nav-start {
+  padding-left: 15px;
+}
+
+@media(max-width:768px){
+  .navigation {
+    display: block;
+    font-size: 20px;
+  }
+  .nav-start {
+    display: none;
+  }
 }
