--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: #F1FFFA;
+  height: calc(100vh - 77px);
 }
 
 .App-logo {
@@ -26,22 +28,46 @@
 .navigation {
   display: flex;
   justify-content: space-between;
-  padding: 15px;
+  align-items: center;
+  padding: 15px 50px;
   font-size: 20px;
   width: 100%;
+  background-color: #1EFFBC;
+  box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
 .main {
-  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
+  height: 100%;
 }
 
 .navigation a {
   padding: 15px;
+  background: white;
+  border-radius: 25px;
+  padding: 5px;
 }
 
 .nav-start {
   padding-left: 15px;
+  font-size: 15px;
+  margin: 0;
+}
+
+.nav-start h1 {
+  margin: 5px;
+  font-weight: 400;
+}
+
+.nav-mid a {
+  margin: 0 2px;
+}
+
+.nav-end a {
+  margin: 0 2px;
 }
 
 @media(max-width:768px){
