--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,8 +1,50 @@
-.landing-main h1 {
-    font-size: 40px;
+.main-new-user {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
-.landing-main ol {
-    width: 30%;
+.LandingPage {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.landing-main {
     margin: 0 auto;
+    
+}
+
+.landing-main h1 {
+    font-size: 60px;
+    margin: 0;
+}
+
+.landing-main h4 {
+    font-size: 30px;
+}
+
+.landing-main button {
+    width: 30%;
+    margin: 20px auto;
+    border-radius: 20px;
+    padding: 10px 0;
+}
+
+.landing-main button:focus {
+    outline: none;
+}
+
+.landing-desc {
+    text-align: left;
+    float: left;
+    padding: 0 40px;
+}
+
+.LandingPage img {
+    float: right;
+    height: calc(90vh - 97px);
+    margin-left: auto;
 }
