--- a/src/App.css
+++ b/src/App.css
@@ -39,9 +39,9 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 100%;
   height: 100%;
+  padding-top: 20px;
 }
 
 .navigation a {
@@ -71,11 +71,17 @@
 }
 
 @media(max-width:768px){
-  .navigation {
-    display: block;
-    font-size: 20px;
+  .App {
+    height: calc(100vh - 48px);
   }
-  .nav-start {
-    display: none;
+  .navigation {
+    display: flex;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+  }
+  .navigation a {
+    font-size: 10px;
+    margin: 5px 2.5px;
   }
 }
