--- a/src/routes/VibesPage/Vibes.css
+++ b/src/routes/VibesPage/Vibes.css
@@ -46,16 +46,27 @@
     transform: matrix(0.95, 0, 0, 0.95, 0, 0);
 }
 
-
-
+.active-vibe {
+    text-decoration: underline !important;
+}
 
 .vibes {
     display: flex;
+    flex-flow: column;
+    height: 90%;
 }
 
 .vibes-nav {
-    width: 10%;
+    margin: 0 auto;
+    width: 30%;
     text-decoration: none;
+    padding: 10px;
+}
+
+.vibes-nav a {
+    padding:10px 15px;
+    padding-bottom: 20px;
+    font-size: 25px;
 }
 
 .vibes ul li {
@@ -69,7 +80,29 @@
 .seed-toggle ul {
     display: flex;
     justify-content: center;
-    margin: 5px;
+    padding: 0;
+}
+
+.seed-toggle ul li {
+    padding: 5px;
+}
+
+.seed-active {
+    color: white;
+    background-color: black !important;
+}
+
+.seed-toggle ul li button {
+    font-size: 15px;
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    border: white;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+}
+
+.seed-toggle ul li button:focus {
+    outline: none;
 }
 
 .vibes-main {
@@ -81,6 +114,10 @@
     justify-content: center;
 }
 
+.add-vibe {
+    padding-top: 10px;
+}
+
 .add-vibe input {
     margin: 20px 5px 5px;
     width: 200px;
@@ -90,6 +127,8 @@
     display: flex;
     flex-flow: wrap;
     justify-content: center;
+    width: 60%;
+    margin: 0 auto;
 }
 
 .search-artist, .search-track {
