--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -65,6 +65,18 @@ main {
 
 /* Calendar */
 
+.calendar-page button {
+  font-size: 20px;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid black;
+  margin: 5px;
+}
+
+.calendar-page button:focus {
+  outline: none;
+}
+
 .calendar {
   display: block;
   position: relative;
