--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding-top: 20px;
 }
 
 .navigation a {
@@ -63,6 +62,7 @@
   font-weight: 400;
 }
 
+.nav-start:hover,
 .nav-start:active {
   background: greenyellow;
 }
@@ -72,6 +72,7 @@
   transition: .3s;
 }
 
+.nav-mid a:hover,
 .nav-mid a:active {
   background: greenyellow;
 }
@@ -81,6 +82,7 @@
   transition: .3s;
 }
 
+.nav-end a:hover,
 .nav-end a:active {
   background: greenyellow;
 }
