--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -84,8 +84,7 @@ main {
   border: 0.5px solid #0D1F2D;
   border-radius: 5px;
   height: 80vh;
-  margin: 0 auto;
-
+  margin: 5vh auto;
 }
 
 .cal-header {
