--- a/src/components/Entry/Entry.css
+++ b/src/components/Entry/Entry.css
@@ -1,6 +1,6 @@
 .entry {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin: 0 auto;
     background: #1A1916;
     width: 65%;
@@ -69,7 +69,7 @@
     position: absolute;
     font-size: 40px;
     left: 40px;
-    top: 15%;
+    top: 18%;
     transition: .4s ease-in-out
 }
 
