--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -14,7 +14,7 @@
 
 .landing-main {
     margin: 0 auto;
-    
+    background: #F1FFFA;
 }
 
 .landing-main h1 {
@@ -67,6 +67,7 @@
 
 @media(max-width:768px){
     .landing-main h1 {
-        font-size: 20px;
+        font-size: 42px;
+        margin-top: 200px;
     }
 }
