--- a/src/routes/DemoPage/DemoPage.css
+++ b/src/routes/DemoPage/DemoPage.css
@@ -2,18 +2,22 @@
     outline: none;
 }
 
+.demo-page .entry-face {
+    position: relative;
+}
+
 .tooltip {
   position: relative;
 }
 
 .tooltip .tooltiptext {
   opacity: 0;
-  width: 180px;
+  width: 250px;
   background-color: black;
   color: #fff;
-  text-align: center;
+  text-align: left;
   border-radius: 6px;
-  padding: 15px 0;
+  padding: 15px;
   position: absolute;
   z-index: 1;
   bottom: 150%;
@@ -35,4 +39,33 @@
 
 .tooltip:hover .tooltiptext, .tooltip:active .tooltiptext  {
   opacity: 1;
+}
+
+iframe .tooltiptext-left {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    left: 110%;
+} 
+
+iframe .tooltiptext-left::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+}
+
+iframe .tooltiptext-left {
+    visibility: active;
 }
