--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,9 @@
   background: transparent;
 }
 
-.non-user .landing-main {
+.landing-desc {
   width: 69%;
+  margin: 0 auto;
 }
 
 .navigation {
@@ -61,6 +62,7 @@
   width: 100%;
   background-color: #1EFFBC;
   box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+  z-index: 100;
 }
 
 .main {
@@ -68,6 +70,13 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+}
+
+.main-new-user {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .non-nav {
