--- a/src/routes/DemoPage/DemoPage.css
+++ b/src/routes/DemoPage/DemoPage.css
@@ -13,7 +13,7 @@
 .tooltip .tooltiptext {
   opacity: 0;
   width: 250px;
-  background-color: black;
+  background-color: #FF8803;
   color: #fff;
   text-align: left;
   border-radius: 6px;
@@ -34,7 +34,7 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: black transparent transparent transparent;
+  border-color: #FF8803 transparent transparent transparent;
 }
 
 .tooltip:hover .tooltiptext, .tooltip:active .tooltiptext  {
