--- a/src/routes/VibesPage/Vibes.css
+++ b/src/routes/VibesPage/Vibes.css
@@ -1,3 +1,8 @@
+.new-user-seeds {
+    font-size: 30px;
+    color: rgb(212, 31, 31);
+}
+
 .search-track, .search-artist {
     width: 200px;
     height: 270px;
