--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   background: linear-gradient(
     rgba(0, 0, 0, 0.05), 
     rgba(0, 0, 0, 0.15)
-  ), url("/images/fallboy.jpg") no-repeat -40px -280px fixed; 
+  ), url("https://i.imgur.com/UdS6xB9.jpg") no-repeat -40px -280px fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
