--- a/src/App.css
+++ b/src/App.css
@@ -161,6 +161,9 @@
     font-size: 10px;
     margin: 5px 2.5px;
   }
+  .nav-end a {
+    font-size: 15px;
+  }
   .non-user {
     background: #087E8B;
   }
